k8s/manifests/site-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: default
spec:
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
